# matsciml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.xpu  LICENSE.md  MACE_EF.ipynb  MANIFEST.in  README.md  Security.md  conda-xpu.yml  conda.yml  datasets_test.ipynb  entrypoint.sh  pyproject.toml  setup.cfg  setup.py  test_notebook copy.ipynb  test_notebook.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: make_env.yml  pre-commit-action.yml  run_pytest_datasets.yml  run_pytest_endtoend.yml  run_pytest_interfaces.yml  run_pytest_lightning.yml  run_pytest_models.yml  run_pytest_repo.yml  scorecard.yml
docker/: Dockerfile  Dockerfile.cobalt_dl  Dockerfile.xpu  requirements_clean.txt
docs/: REFACTOR.md
docs/source/: best-practices.rst  callbacks.rst  conf.py  datasets.rst  developers.rst  experiment-interface.rst  how-to.rst  index.rst  inference.rst  models.rst  schema.rst  training.rst  transforms.rst
examples/: cdvae_configs.py  devel-example.ipynb  leaderboard_format_example.py  oe62_ddp_example.py  oe62_megnet_example.py  precompute_mp_cdvae.py  simple_cli_example.sh  simple_example_cdvae.py  simple_example_cdvae_inference.py  simple_example_cdvae_metrics.py  simple_example_multi_node.py  simple_example_pt_lightning.py  simple_example_slurm.py  simple_example_torch.py  simple_is2re_gala.py  slurm_submit.sh  train_with_callbacks_example.py
examples/callbacks/: SAM.py  autocorrelation.py  code-carbon.py  exponential_moving_average.py  helper.py  loss_scheduling.py
examples/cli/: data.yml
examples/datasets/: periodic_properties_pipeline.py
examples/devices/: submit_ddp_mpi.sh  submit_ddp_slurm.sh  xpu_ddp_mpi.py  xpu_ddp_slurm.py  xpu_example.py
examples/interfaces/: ase_from_pretrained.py  ase_from_scratch.py  ase_multitask_from_pretrained.py
examples/lightning_cli/: data.yml  egnn.yml  run.sh  trainer.yml
examples/materials_project/: download_base.sh  single_task_base.py  single_task_devset.py  single_task_egnn.py  single_task_symmetry.py
examples/model_demos/: egnn_pyg.py  faenet_pyg.py  gala.py  m3gnet_dgl.py  mace_wrapper.py  megnet_dgl.py  mpnn_dgl.py  schnet_dgl.py  tensornet_dgl.py
examples/multitask/: single_data_multitask_example.py  three_datasets.py
examples/nomad/: single_task_devset.py
examples/oqmd/: single_task_devset.py
examples/symmetry/: multi_symmetry_example.py  pointcloud_symmetry_example.py  single_symmetry_example.py
experiments/: README.md  experiment_config.yaml  multi_data_multi_task.yaml  single_data_single_task.yaml  training_script.py
experiments/configs/: multi_data_multi_task.yaml
experiments/data_config/: __init__.py  carolina.py  data_config.py  gnome.py  is2re.py  lips.py  materials_project.py  materials_project_trajectory.py  nomad.py  oqmd.py  s2ef.py  symmetry.py
experiments/datasets/: __init__.py  carolina.yaml  data_module_config.py  lips.yaml  materials_project.yaml
experiments/model_config/: __init__.py  egnn_dgl.py  faenet_pyg.py  gala.py  m3gnet_dgl.py  mace_pyg.py  megnet_dgl.py  model_config.py  tensornet_dgl.py
experiments/models/: __init__.py  data.yaml  egnn_dgl.yaml  faenet_pyg.yaml  gala_pc.yaml  m3gnet_dgl.yaml  mace_pyg.yaml  megnet_dgl.yaml  tensornet_dgl.yaml
experiments/norms/: carolina-16080samples-norms.json  gnome-26940samples-norms.json  iit-100k-9949samples-norms.json  iit-10k-1000samples-norms.json  iit-1M-99474samples-norms.json  iit-250k-24875samples-norms.json  iit-25k-2491samples-norms.json  iit-50k-4978samples-norms.json  iit-full_data-176866samples-norms.json  is2re-46032samples-norms.json  lips-1750samples-norms.json  materials-project-11273samples-norms.json  mp-traj-110621samples-norms.json  nomad-10826samples-norms.json  oqmd-76666samples-norms.json  s2ef-200000samples-norms.json
experiments/task_config/: task_config.py
experiments/trainer_config/: __init__.py  trainer.yaml  trainer_args.py  trainer_config.py
experiments/training_utils/: __init__.py  utils.py
experiments/utils/: configurator.py  utils.py
matsciml/: __init__.py
matsciml/common/: __init__.py  data_parallel.py  distutils.py  inspection.py  packages.py  registry.py  transforms.py  types.py  utils.py
matsciml/datasets/: DATASETS.md  README.md  __init__.py  base.py  generate_subsplit.py  generic.py  is2re_pyg2dgl_conversion.py  lmdb_cli.py  multi_dataset.py  ocp_datasets.py  schema.py  single_point_lmdb.py  trajectory_lmdb.py  utils.py  validators.py
matsciml/lightning/: __init__.py  callbacks.py  cli.py  data_utils.py  ddp.py  loss_scaling.py  profiling.py  registry.py  xpu.py
matsciml/models/: README.md  __init__.py  base.py  common.py  diffusion_pipeline.py  inference.py  losses.py
matsciml/modules/: __init__.py  evaluator.py  exponential_moving_average.py  normalizer.py
matsciml/preprocessing/: README.md  __init__.py  atoms_to_graphs.py  generate_summary.py  produce_split.py  utils.py
matsciml/tests/: test_pipeline.py
ocpmodels/common/: __init__.py  data_parallel.py  registry.py  types.py
ocpmodels/datasets/: DATASETS.md  README.md  __init__.py  base.py  cdvae_datamodule.py  cdvae_datasets.py  oe62.py  (+9 more)
pl-configs/: trainer.yml
scripts/: cdvae_preprocess.py  convert_oe62.py  download_datasets.py  download_ocp_data.py  generate_leaderboard_logs.py  get_zenodo_is2re.py  materials_project_download.sh  preprocess_dgl_ef.py  uncompress.py  utils.py
(+400 files in other folders)
