[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[project]
authors = [
  {"name" = "Intel Corporation", "email" = "none@xyz.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "psutil",
  "pytorch_lightning==2.2.1",
  "dgl==2.0.0",
  "dgllife==0.3.2",
  "rdkit==2023.9.5",
  "numba>=0.55.0",
  "numpy>=1.21.0",
  "matplotlib",
  "munch==2.5.0",
  "lmdb==1.4.1",
  "geometric-algebra-attention>=0.3.0",
  "sympy>=1.10.1",
  "jsonargparse[signatures]>=4.13.1",
  "mp_api==0.41.2",
  "emmet-core==0.82.1",
  "pydantic==2.7.0",
  "pymatgen==2024.3.1",
  "schema>=0.7.5",
  "ase>=3.22.1",
  "matgl==1.0.0",
  "einops==0.7.0",
  "mendeleev==0.15.0",
  "e3nn",
  "mace-torch==0.3.4"
]
description = "PyTorch Lightning and Deep Graph Library enabled materials science deep learning pipeline"
dynamic = ["version", "readme"]
keywords = ["performance", "portability"]
license = {file = "LICENSE.md"}
name = "matsciml"
requires-python = ">=3.8"

[project.optional-dependencies]
all = [
  "matsciml[dev,symmetry,pyg]",
]
dev = [
  "ruff==0.3.6",
  "pre-commit",
  "pytest"
]
pyg = [
  "torch_geometric==2.4.0",
  "torch_scatter==2.1.2",
  "torch_sparse==0.6.18",
  "pybind11"
]
symmetry = [
  "rowan==1.3.0.post1",
]

[tool.setuptools.packages.find]
include = ["matsciml*"]
where = ["."]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "matsciml.__version__"}

[tool.ruff.lint]
ignore = ["F403", "F405"]
