[metadata]
name = ocpmodels
version = attr: ocpmodels.__version__
description = PyTorch Lightning and Deep Graph Library enabled Open Catalyst pipeline
long_description = file: README.md
license = MIT License

[options]
packages = find:
include_package_data = True
install_requires =
	psutil
	pytorch_lightning ==1.6.3
	dgl >=0.8.2
	numba >=0.55.0
	numpy >=1.21.0
	matplotlib
	munch ==2.5.0
	lmdb ==1.3.0
	geometric-algebra-attention >=0.3.0
	sympy >=1.10.1
	jsonargparse[signatures] >=4.13.1
        mp_api ==0.30.1
python_requires >= 3.7

[options.extras_require]
dev = black; pytest; pytest-dependency
